--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "^9.2.3",
+    "swiper": "^9.2.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.1",
     "three": "^0.151.3"
   }
