--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@mui/material": "^5.12.0",
     "@react-three/drei": "^9.65.3",
     "@react-three/fiber": "^8.12.1",
+    "@sanity/cli": "^3.10.0",
+    "@sanity/client": "^6.0.1",
+    "@sanity/image-url": "^1.0.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
     "gsap": "^3.11.5",
     "next": "13.3.0",
-    "postcss": "8.4.21",
+    "next-sanity": "^4.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "^9.2.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.1",
     "three": "^0.151.3"
