--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@sanity/cli": "^3.10.0",
     "@sanity/client": "^6.0.1",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.11.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
@@ -27,6 +29,7 @@
     "next-sanity": "^4.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanity": "^3.11.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.1",
     "three": "^0.151.3"
