--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.4.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "express-fileupload": "^1.4.0",
     "framer-motion": "^10.12.4",
     "gsap": "^3.11.5",
     "next": "13.3.0",
